# CTRDL

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: Build-PreRelease.yaml  Build-Release.yaml
Include/: dlfcn.h
ResGen/: CMakeLists.txt  LICENSE  README.md
ResGen/Source/: Binary.cpp  CmdArgs.cpp  CmdArgs.h  Main.cpp  Print.h  ResGenerator.cpp  ResGenerator.h  SymParse.cpp  SymParse.h  SymTable.cpp  SymTable.h  Symbol.cpp  Symbol.h  ToolCtx.cpp  ToolCtx.h
Source/: API.c  ELFUtil.c  ELFUtil.h  Error.c  Error.h  Handle.c  Handle.h  Loader.c  Loader.h  Relocs.c  Relocs.h  Stream.c  Stream.h  Symbol.c  Symbol.h
Tests/: CMakeLists.txt  InteropApp.c  MathApp.c  Path.c
Tests/Libs/: CMakeLists.txt  Interop.c
